--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,12 @@
     <title> Chat App </title>
 </head>
 <body>
-    Chat App
+Chat App
+
+    <form id="post-form">
+        <input name="message" placeholder="Message"/>
+        <button id="post">Send Message</button>
+    </form>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
