--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@ Chat App
         <input name="message" placeholder="Message"/>
         <button id="post">Send Message</button>
     </form>
+    <button id="send-location">Send Location</button>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
