--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,18 @@ Chat App
 
     <script id="message-template" type="text/html">
         <div>
-            <p>{{ message }}</p>
+            <p>{{createdAt}} - {{ message }}</p>
         </div>
     </script>
     <script id="location-template" type="text/html">
         <div>
-            <p><a href={{location}} target="_blank">My Current Location</a></p>
+            <p>{{createdAt}} - <a href={{url}} target="_blank">My Current Location</a></p>
         </div>
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+
+    <!--All the tools necessary to format time-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
