--- a/public/chat.html
+++ b/public/chat.html
@@ -24,7 +24,7 @@
 <script id="message-template" type="text/html">
     <div class="message">
         <p>
-            <span class="message__name">Some User Name</span>
+            <span class="message__name">{{username}}</span>
             <span class="message__meta">{{createdAt}} </span>
         </p>
         <p>{{ message }}</p>
@@ -33,7 +33,7 @@
 <script id="location-template" type="text/html">
     <div class="message">
         <p>
-            <span class="message__name">Some User Name</span>
+            <span class="message__name">{{username}}</span>
             <span class="message__meta">{{createdAt}} </span>
         </p>
         <p><a href={{url}} target="_blank">My Current Location</a></p>
